# pacman-cedx-vita

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build-and-deploy.yml
docs/: app.js  index.html  styles.css
docs/overrides/: manifest.json
docs/overrides/shader/: sys_charlight_vs.cgv.vpat  sys_mapgen_ps.cgp.vpat  sys_mapgen_vs.cgv.vpat
extras/: cpuinfo
extras/livearea/: template.xml
lib/so_util/: so_util.c  so_util.h
lib/vitaGL/source/: blending.c  custom_shaders.c
lib/vitaGL_clean/source/: gxm.c
source/: configurator.cpp  dynlib.c  java.c  main.c  patch.c
source/reimpl/: controls.c  egl.c  egl.h  io.c  io.h  kubridge_shim.c  pthr.c  sys.c
source/utils/: dialog.c  dialog.h  glutil.c  glutil.h  init.c  logger.c  logger.h  pgxt.c  pgxt.h  preloader.c  preloader.h  settings.c  settings.h
